--- a/index.html
+++ b/index.html
@@ -26,116 +26,18 @@
       <option value="dateReleaseDown">release date down</option>
     </select>
     <section class="film-galary film-galary__wrapper">
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
-      <div class="film-galary__item">
-        <a href="#">
-          <img src="./Images/SomeFilm.jpg" alt="Name of film" class="film-galary__img">
-        </a>
-      </div>
+     
+      
     </section>
     <!-- <div class="pagination-wrapper"> -->
       <div class="pagination">
-        <a href="#">«</a>
-        <a href="#">1</a>
-        <a class="active" href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#">5</a>
-        <a href="#">»</a>
+        <a class="pagination-item" href="#">«</a>
+        <a class="pagination-item active" href="#">1</a>
+        <a class="pagination-item" href="#">2</a>
+        <a class="pagination-item" href="#">3</a>
+        <a class="pagination-item" href="#">4</a>
+        <a class="pagination-item" href="#">5</a>
+        <a class="pagination-item" href="#">»</a>
       </div>
     <!-- </div> -->
 
