feat: add pagination 5 pages

--- a/index.html
+++ b/index.html
@@ -26,18 +26,19 @@
       <option value="dateReleaseDown">release date down</option>
     </select>
     <section class="film-galary film-galary__wrapper">
-     
-      
+		
     </section>
     <!-- <div class="pagination-wrapper"> -->
       <div class="pagination">
-        <a class="pagination-item" href="#">«</a>
+        <a class="pagination-item" href="#">First</a>
+        <a class="pagination-item" href="#">Prev</a>
         <a class="pagination-item active" href="#">1</a>
         <a class="pagination-item" href="#">2</a>
         <a class="pagination-item" href="#">3</a>
         <a class="pagination-item" href="#">4</a>
         <a class="pagination-item" href="#">5</a>
-        <a class="pagination-item" href="#">»</a>
+        <a class="pagination-item" href="#">Next</a>
+        <a class="pagination-item" href="#">Last</a>
       </div>
     <!-- </div> -->
 
