--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
     <section class="film-galary film-galary__wrapper">
 		
     </section>
-    <!-- <div class="pagination-wrapper"> -->
-      <div class="pagination">
-        <a class="pagination-item" href="#">First</a>
-        <a class="pagination-item" href="#">Prev</a>
-        <a class="pagination-item active" href="#">1</a>
-        <a class="pagination-item" href="#">2</a>
-        <a class="pagination-item" href="#">3</a>
-        <a class="pagination-item" href="#">4</a>
-        <a class="pagination-item" href="#">5</a>
-        <a class="pagination-item" href="#">Next</a>
-        <a class="pagination-item" href="#">Last</a>
-      </div>
-    <!-- </div> -->
+      <div class="pagination"> 
+
+        <!-- <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">First</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">Prev</a>
+        <a class="pagination-item active" href="#" aria-label="Go to the page" title="Go to the page">1</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">2</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">3</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">4</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">5</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">...</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">Next</a>
+        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">Last</a> -->
+
+      </div>  
 
   </main>
 
