--- a/index.html
+++ b/index.html
@@ -10,42 +10,33 @@
 </head>
 <body>
   <header class="header">
-    <a href="#" class="header-link" title="Home">
-      <img src="./Images/home.svg" alt="Home" class="header-img">
+    <a href="#" class="header-home-link" title="Home">
+      <!-- <img src="./Images/home.svg" alt="Home" class="header-img"> -->
+      <svg class="header-img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px" height="50px">
+        <path style="line-height:normal;text-indent:0;text-align:start;text-decoration-line:none;text-decoration-style:solid;text-decoration-color:#000;text-transform:none;block-progression:tb;isolation:auto;mix-blend-mode:normal" d="M 24.962891 1.0546875 A 1.0001 1.0001 0 0 0 24.384766 1.2636719 L 1.3847656 19.210938 A 1.0005659 1.0005659 0 0 0 2.6152344 20.789062 L 4 19.708984 L 4 46 A 1.0001 1.0001 0 0 0 5 47 L 18.832031 47 A 1.0001 1.0001 0 0 0 19.158203 47 L 30.832031 47 A 1.0001 1.0001 0 0 0 31.158203 47 L 45 47 A 1.0001 1.0001 0 0 0 46 46 L 46 19.708984 L 47.384766 20.789062 A 1.0005657 1.0005657 0 1 0 48.615234 19.210938 L 41 13.269531 L 41 6 L 35 6 L 35 8.5859375 L 25.615234 1.2636719 A 1.0001 1.0001 0 0 0 24.962891 1.0546875 z M 25 3.3222656 L 44 18.148438 L 44 45 L 32 45 L 32 26 L 18 26 L 18 45 L 6 45 L 6 18.148438 L 25 3.3222656 z M 37 8 L 39 8 L 39 11.708984 L 37 10.146484 L 37 8 z M 20 28 L 30 28 L 30 45 L 20 45 L 20 28 z" font-weight="400" font-family="sans-serif" white-space="normal" overflow="visible"/>
+    </svg>
     </a>
     <a href="#">
       <button type="button" class="button-login">Sing In/Sign Up</button>
     </a>
   </header>
   <main class="main">
+
     <select class="select">
-      <option value="none">none</option>
-      <option value="ratingUp">rating up</option>
+      <option value="popularityDown">popularity down</option>
       <option value="ratingDown">rating down</option>
-      <option value="dateReleaseUp">release date up</option>
+      <option value="ratingUp">rating up</option>
       <option value="dateReleaseDown">release date down</option>
+      <option value="dateReleaseUp">release date up</option>
     </select>
+
     <section class="film-galary film-galary__wrapper">
-		
     </section>
-      <div class="pagination"> 
 
-        <!-- <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">First</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">Prev</a>
-        <a class="pagination-item active" href="#" aria-label="Go to the page" title="Go to the page">1</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">2</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">3</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">4</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">5</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">...</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">Next</a>
-        <a class="pagination-item" href="#" aria-label="Go to the page" title="Go to the page">Last</a> -->
-
-      </div>  
+    <nav class="pagination">
+    </nav>  
 
   </main>
-
-
   <script src="/script.js"></script>
 </body>
 </html>
