fix: forms validashion

--- a/autorisation.html
+++ b/autorisation.html
@@ -18,7 +18,7 @@
 
 	<main class="main">
 		<form class="form" id="authorization-form" method="POST">
-			<div class="authorization-form-content form__container">
+			<div class="form__container">
 				<h2 class="form__title">Sign In</h2>
 				<hr size="1" color="#EEBF3A">
 				<div class="form__text-block">
@@ -35,9 +35,9 @@
 
 				</div>
 				<div class="form__button-type">
-					<button class="button button-secondary" type="submit">Sign</button>
-					<!-- <a id="registration-btn" class="button button-secondary" href="/registration.html" target='_blank'>Registration</a> -->
-					<a id="registration-btn" class="button button-secondary" href="/registration.html">Registration</a>
+					<!-- <button id="signin-submit" class="button button-disabled" disabled>Sign In</button> -->
+					<a id="signin-submit" class="button button-disabled" href="/index.html" disabled>Sign In</ф>
+					<a id="registration-btn" class="button button-primary" href="/registration.html">Registration</a>
 				</div>
 			</div>
 		</form>
