feat: add users

--- a/autorisation.html
+++ b/autorisation.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="form__button-type">
 					<!-- <button id="signin-submit" class="button button-disabled" disabled>Sign In</button> -->
-					<a id="signin-submit" class="button button-disabled" href="/index.html" disabled>Sign In</ф>
+					<a id="signin-submit" class="button button-disabled disabled" href="/index.html">Sign In</ф>
 					<a id="registration-btn" class="button button-primary" href="/registration.html">Registration</a>
 				</div>
 			</div>
