feat: add form add film

--- a/autorisation.html
+++ b/autorisation.html
@@ -17,7 +17,7 @@
   </header>
 
 	<main class="main">
-		<form class="form" id="authorization-form" method="POST">
+		<form id="authorization-form" action="index.html">
 			<div class="form__container">
 				<h2 class="form__title">Sign In</h2>
 				<hr size="1" color="#EEBF3A">
@@ -35,14 +35,14 @@
 
 				</div>
 				<div class="form__button-type">
-					<!-- <button id="signin-submit" class="button button-disabled" disabled>Sign In</button> -->
-					<a id="signin-submit" class="button button-disabled disabled" href="/index.html">Sign In</ф>
+					<button id="signin-submit" class="button button-primary" disabled>Sign In</button>
 					<a id="registration-btn" class="button button-primary" href="/registration.html">Registration</a>
 				</div>
 			</div>
 		</form>
 	</main>
-
+	
   <script src="./script/authorization.js"></script>
 </body>
 </html>
+<!-- <a id="signin-submit" class="button button-disabled disabled" href="/index.html">Sign In</a> -->
