feat: add loader, readme

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>film-gallery</title>
 </head>
 <body>
+  <div id="loading"></div>
   <header class="header">
 		<a href="#" class="header__home-link" title="Home">
 			<img class="header__home-link-img" src="./Images/home.svg" alt="home">
